# pybird

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  LICENSE.txt  MANIFEST.in  Q1.txt  README.md  RELEASE.md  TranslationM2Py.ipynb  cbird.nb  example.py  fftlog.py  likelihood_class.py  likelihood_class_cern.py  make_taylorgrid.py  pybird.ipynb  pybird.py  pybird_EH_likecbird.py  pybird_cern.py  pybird_class.ipynb  pybird_class_2.ipynb  pybird_dev.ipynb  pybird_dev2.ipynb  pybird_fullresum.py  pynest.npy  pyproject.toml  requirements-core.txt  requirements-jax.txt  run_pybird.ipynb  setup.py  thomasplot.py
cobaya_tree/: myps_like.py  myps_like.yaml
demo/: correlator.ipynb  fake.ipynb  inference.ipynb  jaxbird_benchmarking.ipynb  jaxbird_benchmarking_M4p-chip.ipynb  likelihood.ipynb  run.ipynb  run_abacus.ipynb  run_boss.ipynb
docs/: build_docs.sh  build_docs_robust.py  conf.py  index.rst  requirements.txt  requirements_minimal.txt
eft_highzNGC/: __init__.py  eft_highzNGC.data
eft_withbao_highzNGC/: __init__.py  eft_withbao_highzNGC.data
montepython/: eftboss.param  efteboss.param  slurm_analyze.sh  slurm_evaluate.sh  slurm_sample.sh
notebook/: check_run_pybird.ipynb  dev_exact_time.ipynb  dev_exact_time_ps.ipynb  examples_yaniv.ipynb  nnlo.ipynb  redcf.npy  redcf_hd.npy  redcf_noloop.npy  w_precision.ipynb
notebooks/: correlator.ipynb  correlator_cookbook.ipynb  datastruct.ipynb  datastruct_cookbook.ipynb  likelihood.ipynb  likelihood_cookbook.ipynb  potatoes.ipynb
pybird/: Untitled.ipynb  __init__.py  bird.py  common.py  config.py  correlator.py  cosmo.py  emulator.py  fake.py  fftlog.py  fourier.py  greenfunction.py  inference.py  integrated_model_jax.py  io_pb.py  jax_special.py  likelihood.py  likelihood_class.py  matching.py  module.py  nnlo.py  nonlinear.py  projection.py  pybird.py  resum.py  resumfactor.py  run.py  symbolic.py  symbolic_pofk_linear.py  utils.py
pybird.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pybird_dev/: Fisher_CF.ipynb  Fisher_wedges.ipynb  Fisher_wedges_create_covariance.ipynb  Limber.py  PyBird_cookbook.ipynb  Untitled.ipynb  __init__.py  angular.py  bird.py  check_run_pybird.ipynb  common.py  dev_exact_time.ipynb  dev_exact_time_nseries.ipynb  eisensteinhu.py  examples.ipynb  fftbias-cleaned.ipynb  fftbias.ipynb  fftlog.py  fourier.py  greenfunction.py  io.py  io_pb.py  likelihood.py  likelihood_class.py  main.py  multi.py  nice_plots.ipynb  nnlo.py  nonlinear.py  nonlinearLimber.py  projection.py  pybird.py  resum.py  run_pybird_2.ipynb  test_for_marco.ipynb  timefunction.py  w_precision.ipynb
tbird/: Grid.py  checkglue.py  computederivs.py  plinear.py  pnonlinear.py
tests/: README.md  run_tests.py  test_2508.ipynb  test_bird.py  test_correlator.py  test_emulator.py  test_likelihood.py  test_utils.py
(+227 files in other folders)
