[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pybird-lss"
authors = [
    {name = "Pierre Zhang"},
    {name = "Guido D'Amico"}]
maintainers = [
    {name = "Pierre Zhang"},
    {name = "Guido D'Amico"},
    {name = "Johannes U. Lange", email = "jlange@american.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">= 3.7"
dependencies = ["numpy", "scipy"]

[project.urls]
Home = "https://pybird.readthedocs.io"

[tool.flit.sdist]
exclude = ["data", "docs", "montepython", "notebooks", ".gitignore"]

[tool.flit.module]
name = "pybird"
